--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -1,134 +1,126 @@
-.signup-body {
+.Sign-Up{
 	font-family: Circular, Helvetica, Arial, sans-serif;
 	font-size: .9375em;
-	color: #88898c;
+	color: #222326;
 	background: white;
-}
-
-.signup-body #logo a {
-	background: url(https://storage.googleapis.com/pr-newsroom-wp/1/2018/11/Spotify_Logo_CMYK_Black.png) transparent no-repeat center center;
-	width: 100%;
-  height: 38px;
-  background-size: contain;
-  display: block;
-	margin: 0 auto;
-	padding: 30px 0 30px;
-}
-
-@media (max-width:769px) {
-	.signup-body #logo a {
-		padding: 20px 0 20px;
-		margin: 10px	
-	}
-}
-
-.signup-body .signup-box {
-	box-sizing: border-box;
-	max-width: 400px;
-	padding: 0;
-}
-
-.signup-body h2 {
-	padding-top: 10px;
-	color: #1c1c1f;
-  font-size: 18px;
-	text-align: center;
-	font-weight: 900;
-  line-height: 1.2;
-  text-rendering: optimizelegibility;
-}
-
-.signup-body .input-field {
-	padding: 0 0.75em;
-	height: 48px;
-	width: 400px;
-	margin: 16px auto;
-	font-size: .9375em;
-
-}
-
-.signup-body label {
-	margin: 0;
-}
-
-/*code of spinner from: https://css-tricks.com/snippets/css/turn-off-number-input-spinners/ */
-.signup-body input[type=number]::-webkit-inner-spin-button, 
-.signup-body input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  -moz-appearance: none;
-  margin: 0; 
-}
-
-/*code idea from: https://stackoverflow.com/questions/611482/change-color-and-appearance-of-drop-down-arrow*/
-.signup-body .dropdown {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  background: url(https://static.thenounproject.com/png/1270386-200.png) no-repeat center right;
-  background-size: contain;
-}
-
-.signup-body .birth-date-signup {
-	color: #88898c;
-	font-size: .9375em;
-	height: 48px;
-	padding: 0 0.75em;
-}
-
-
-.signup-body #signup-button {
-	width: 320px;
-	height: 50px;
-	margin: 16px auto;
-	background:#1DB954;
-	border:none;
-	text-align: center;
-	font-size:14px;
-	letter-spacing: 2px;
-	line-height: 3;
+	font-size: 18px;
 	font-weight: 700;
 }
 
-.signup-body p {
-	font-size: .75em;
-	text-align: center;	
+.Sign-Up .content{
+	padding:1.5em;
+}
+
+.Sign-Up .Image{
+	background: url(../../images/logo.png)no-repeat center;
+	background-size: contain;
+	display: block;
+	padding: 35px 35px;
+	cursor: pointer;
+}
+
+.Sign-Up .sign-with-facebook{
+	color: white;
+    width: 340px;
+    background-color: #3B5998;
+    padding: 11px 42px 11px;
+    font-size: 18px;
+	font-weight: 700;
+}
+.Sign-Up .sign-with-facebook:hover{
+	color: white;
+	background-color: rgb(45, 83, 165);
+}
+
+.Sign-Up .or{
+	line-height: 0.5;
+	font-weight: 500;
 	color: black;
-	margin: 1em 0;
+	text-align: center;
+  }
+.Sign-Up .or {
+	display: inline-block;
+	position: relative;  
+  }
+.Sign-Up .or:before,
+.Sign-Up .or:after {
+	content: "";
+	position: absolute;
+	height: 5px;
+	border-bottom: 0.5px solid #88898c;;
+	top: 0;
+	width: 250px;
+  }
+.Sign-Up .or:before {
+	right: 100%;
+	margin-right: 15px;
+  }
+.Sign-Up .or:after {
+	left: 100%;
+	margin-left: 15px;
+  }
+
+.Sign-Up h2{
+	font-size: 18px;
+	font-weight: 800;
+  }
+
+.Sign-Up input{
+	max-width: 555px;
+	height: 65px;
+}
+.Sign-Up input::placeholder {
+	font-size: 18px;
 }
 
-.signup-body #signup-button:hover {
-	background: #1ED760;
+.Sign-Up .submit{
+	color: white;
+    width: 340px;
+	background-color: #1DB954;
+    padding: 11px 42px 11px;
+    font-size: 18px;
+	font-weight: 700;
+}
+.Sign-Up .submit:hover{
+	color: white;
+    width: 340px;
+	background-color: rgb(28, 207, 91);
+}
+.Sign-Up .green{
+	color: #1DB954;
 }
 
-.signup-body #signup-button +p {
-	font-size: .9375em;
+.Sign-Up .terms-and-conditions{
+	max-width: 600px;
+	font-size: 0.75em;
 	font-weight: 400;
-	color: black;
+	margin: 0 auto;
 }
 
-.signup-body p a {
-	color:#1DB954;
+.Sign-Up .months{
+	max-width: 215px;
+	height: 65px;
+}
+.Sign-Up .months option {
+	font-size: 18px;
+}
+.Sign-Up .days{
+	max-width: 100px;
+    margin-left: 53px;
+}
+.Sign-Up .year{
+	max-width: 135px;
+    margin-left: 53px;
 }
 
-.signup-body p a:hover {
-	text-decoration-line: none;
-	color: #1ED760;
+.Sign-Up p a:hover{
+	color: rgb(35, 218, 99);
+	text-decoration: none;
 }
 
-.signup-body .empty-input {
-	text-align: left;
-	color: #bd3200;
-	font-size: .9375em;
-	padding:0;
-	margin:0;
+.Sign-Up label{
+	color: #222326;
+
+	font-weight: 400;
+	font-size: 18px;
 }
-
-.signup-body ::-webkit-input-placeholder {
-	font-size: 100% !important;
-  }
-
-  .signup-body .already-exists {
-    color: #bd3200;
-    font-size: 15px;
-    padding-top:10px;
-    margin:0;
-  }
