--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -18,18 +18,18 @@
 	padding: 35px 35px;
 	cursor: pointer;
 }
-
-.Sign-Up .sign-with-facebook{
-	color: white;
-    width: 340px;
-    background-color: #3B5998;
-    padding: 11px 42px 11px;
-    font-size: 18px;
-	font-weight: 700;
-}
-.Sign-Up .sign-with-facebook:hover{
-	color: white;
-	background-color: rgb(45, 83, 165);
+.Sign-Up #facebook-button
+{
+    color: #fff;
+    background-color: #3b5998;
+    font-weight: bold;
+    text-align: center;
+    letter-spacing: 2px;
+    height: 50px;
+    padding:30px auto;
+    text-align: center;
+    font-size: 14px;
+    text-transform: uppercase;
 }
 
 .Sign-Up .or{
