Dynamic search finished with hard coded data , not responsive don't panic

--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -7,7 +7,7 @@
     font-family: spotify-circular,spotify-circular-cyrillic,spotify-circular-arabic,spotify-circular-hebrew,Helvetica Neue,Helvetica,Arial,Hiragino Kaku Gothic Pro,Meiryo,MS Gothic,sans-serif;
 }
 .Search .component-content{
-    padding-left: 16px;
+    padding: 16px;
     margin-top: 35px;
 }
 .Search .previous{
@@ -164,3 +164,103 @@
   font-weight: 700;
   text-shadow: rgb(54, 54, 54);
 }
+
+
+.Search .songs{
+    color: white;
+    width: 100%;
+}
+.Search  .songs .image{
+    box-sizing: border-box;
+    width: 90px;
+    height: 79px;
+}
+  .Search .song-content
+  {
+    width:800px;
+    padding: 3px;
+  }
+  
+  
+  .Search .song-info a
+  {
+    color:#b3b3b3;
+    font-size:12px;
+    text-decoration: none;
+  }
+  .Search .song-info a:hover
+  {
+    color:white;
+    
+    text-decoration: underline;
+  }
+  .Search .songs:hover{
+    background-color: rgba(70, 66, 69,0.4);
+  }
+
+
+  .Search .top-result-card{
+      background-color: rgb(40, 40, 40);
+      border-radius: 15px;
+      padding: 5%;
+  }
+
+  .Search .top-result-card .image{
+    box-sizing: border-box;
+    width: 90px;
+    height: 90px;
+    
+  }
+
+  .Search .artist-card{
+    background-color: rgb(40, 40, 40);
+    border-radius: 15px; 
+    margin-right: 12px;
+    padding-top: 10px;
+    min-width: 180px;
+    min-height: 210px;
+  }
+
+  .Search .artist-card .img-style{
+     width: 110px;
+     height: 110px; 
+     border-radius: 100px; 
+     -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+  }
+
+  .Search .artist-card .artist-info-style{
+      margin-top: 25px !important;
+    font-size: 16px; 
+    font-weight: 700; 
+    }
+    .Search .artist-card a:hover{
+        text-decoration: none;
+    }
+
+
+    .Search .albums-playlists-card{
+        background-color: rgb(40, 40, 40);
+        border-radius: 15px; 
+        margin-right: 12px;
+        padding-top: 10px;
+        min-width: 180px;
+        min-height: 210px;
+      }
+    
+      .Search .albums-playlists-card .img-style{
+         width: 140px;
+         height: 140px; 
+         border-radius: 0px; 
+         -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+        box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+      }
+    
+      .Search .albums-playlists-card .artist-info-style{
+          margin-top: 25px !important;
+        font-size: 16px; 
+        font-weight: 700; 
+        }
+        .Search .albums-playlists-card a:hover{
+            text-decoration: none;
+        }
