--- a/src/Components/Webplayer/YourLibrary/YourLibrary.css
+++ b/src/Components/Webplayer/YourLibrary/YourLibrary.css
@@ -72,6 +72,16 @@
     overflow: hidden;
 }
 
+#webplayer-library .card-text {
+    font-size: 12px;
+    line-height: 18px;
+    height: 70px;
+    color: #b3b3b3;
+    padding: 0;
+    margin-top: 4px;
+    overflow: hidden;
+}
+
 #webplayer-library #likes-card .track-name {
     display: inline;;
 }
