--- a/src/Components/Search/Search.css
+++ b/src/Components/Search/Search.css
@@ -28,12 +28,12 @@
     font-size: 150%;
     font-weight: 100;
     position: absolute;
-    margin-left: -148px;
+    margin-left: 10px;
     color: rgb(99, 97, 97);
 }
 
 .Search .Search-content{
-    margin-top: 3px;
+    margin-top: 3px;    
     margin-left: 37px;
 }
 
@@ -264,3 +264,7 @@
         .Search .albums-playlists-card a:hover{
             text-decoration: none;
         }
+
+    .Search .image-padding{
+        padding: 0 18px;
+    }
