--- a/src/Components/WebFrame/WebNav.css
+++ b/src/Components/WebFrame/WebNav.css
@@ -28,19 +28,19 @@
     margin-left: 230px;
     /* background-color: #121212; */
 }
-#nav-btn{
+.web-nav #nav-btn{
     background-color: #282828;
     border-radius: 30px;
     width: 141px;
     height: 38px;
 }
-.nav-drop{
+.web-nav .nav-drop{
     width:141px;
     height: 30px;
     border-radius: 20px;
     padding: 0px;
     background-color: black;
 }
-.nav-drop:hover{
+.web-nav .nav-drop:hover{
     background-color: #282828;
 }
