--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -49,7 +49,7 @@
 	height: 5px;
 	border-bottom: 0.5px solid #88898c;;
 	top: 0;
-	width: 250px;
+	width: 150px;
   }
 .Sign-Up .or:before {
 	right: 100%;
@@ -64,7 +64,9 @@
 	font-size: 18px;
 	font-weight: 800;
   }
-
+.Sign-Up p{
+	text-align: center;
+}
 .Sign-Up input{
 	max-width: 555px;
 	height: 65px;
@@ -123,4 +125,31 @@
 
 	font-weight: 400;
 	font-size: 18px;
+}
+
+.Sign-Up .error-validate
+{
+	width: 555px;
+    margin: 0 auto;
+    color: red;
+    font-size: 12px;
+    margin-top: -10px;
+    margin-bottom: 20px;
+	text-align: left;
+	font-weight: 100;
+}
+.Sign-Up .form-control:focus 
+{
+  box-shadow: none;
+}
+
+.Sign-Up .incorrect {
+    background-color: #e22134;
+    color: white;
+    font-size: 14px;
+    margin-bottom: 15px;
+    min-height: 40px;
+    padding: 10px;
+    width: 555px;
+	text-align: center;
 }
