--- a/src/Components/WebFrame/Player.css
+++ b/src/Components/WebFrame/Player.css
@@ -33,3 +33,9 @@
     width: 100%;
     height: 100%;
 }
+
+.Player-Footer .fa-mail-forward:before, .fa-share:before {
+    content: "\f064";
+    color: white;
+    font-size: 21px;
+}
