--- a/src/Components/SignUp/SignUp.css
+++ b/src/Components/SignUp/SignUp.css
@@ -18,7 +18,7 @@
 	padding: 35px 35px;
 	cursor: pointer;
 }
-.Sign-Up #facebook-button
+.Sign-Up #login-facebook-button
 {
     color: #fff;
     background-color: #3b5998;
