--- a/src/Containers/WebPlayer/WebPlayer.css
+++ b/src/Containers/WebPlayer/WebPlayer.css
@@ -4,7 +4,7 @@
   background-color: rgb(18,18,18);
   min-height: 100vh;
 }
-body{
+.web-player-class body{
   background-color: rgb(18,18,18) !important;
 }
 
