--- a/src/Components/Premium/PrCard.css
+++ b/src/Components/Premium/PrCard.css
@@ -1,11 +1,11 @@
-#pr-img{
+.premium-card #pr-img{
     width: 142px;
     height: 142px;
     margin-left: auto;
     margin-right: auto;
 }
 @media (max-width:500){
-    #pr-img{
+    .premium-card #pr-img{
         width:50px;
         height: 50px;
     }
