--- a/src/Containers/Premium.css
+++ b/src/Containers/Premium.css
@@ -1,4 +1,4 @@
-#h1-pr{
+.premium-page #h1-pr{
     font-weight: 900;
     font-size: 40px;
 }
@@ -7,7 +7,7 @@
   and (min-device-width: 768px) 
   and (max-device-width: 1024px) 
   and (-webkit-min-device-pixel-ratio: 1) {
-    .header{
+    .premium-page .header{
         height: 45vh;
     }
 }
