--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -3,6 +3,12 @@
 	padding: 0;
   border: border-box;
 }
+.account-page
+{
+  margin-top: 80px;
+
+}
+
 .bg-dark-clr {
     background-image: linear-gradient(#212c39, #121e3d 50%, #000); 
     background-repeat: no-repeat;
