--- a/src/Components/HomePage/HomePageNavbar.css
+++ b/src/Components/HomePage/HomePageNavbar.css
@@ -50,6 +50,7 @@
   
   
   .home-nav #upgradebtn{
+    margin-left: 10px;
     text-decoration: none;
     background-color: transparent;
     color: white;
@@ -143,5 +144,119 @@
     color:#1ed760;
   }
 
+
   
+
+
+  .home-nav .collapse-drop{
+    display: none;
+  }
+  @media (max-width:500px)
+  {
+    .home-nav .collapse-drop{
+      display: flex;
+    }
+  }
+  .drop-down-menu .account-button{
+    border-radius: 23px;
+    height: 32px;
+    padding: 4px;
+    color: #fff;
+    background-color:rgba(0,0,0,.7);
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: .015em;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+  }
+  @media (max-width:1278px)
+  {
+    .drop-down-menu .dropdown-menu {
+      max-width: 100px;
+      min-width: 100px;
+    }
+    .drop-down-menu  #right-drop-down .dropdown-toggle::after { 
+      content: none; 
+      
+    } 
+  }
+  .drop-down-menu .image{
+    width: 28px;
+    height: 28px;
+    border-radius: 50%; 
+    background-color:#1d1e1f;
+    
+  }
+  .drop-down-menu .name
+  {
+    padding-left:5px;
+    vertical-align: middle;
+    margin-bottom:0px;
+  }
+  .drop-down-menu .dropdown-toggle:hover
+  {
+    color: white !important;
+  }
+  .drop-down-menu .dropdown-menu
+  {
+    position: absolute;
+    right: 0;
+    padding:0;
+    margin: 8px 0 0;
+    background-color: #282828;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, .15);
+    border-radius: 4px;
+    visibility: visible;
+    /* overflow: visible  !important; */
+  
+  }
+  .drop-down-menu .btn 
+  {
+    height:35px;
+  }
+  .drop-down-menu .btn:focus{
+    outline: none !important;
+    border:none !important;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0, 0, 0, .175);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0, 0, 0, .175);
+  }
+  .drop-down-menu .dropdown-item
+  {
+    height: 40px !important;
+    padding:0;
+    text-align: left;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: .015em;
+    padding-bottom:5px;
+  }
+  .drop-down-menu .dropdown-item:hover{
+    background-color: #525252 !important;
+    text-decoration: none !important;
+    color:white;
+    border-radius: 4px;
+  }
+  .drop-down-menu .dropdown-item:focus{
+    outline: none !important;
+    border:none !important;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px #525252,0 0 8px #525252;
+    box-shadow: inset 0 1px 1px #525252,0 0 8px #525252;
+  }
+  .drop-down-menu .white-words {
+    color:#a9a9a9;
+  }
+  .drop-down-menu .border-on-top
+  {
+    border-top: 1px solid #404040;
+    padding-top:8px;
+    padding-left:24px;
+    height:35px !important;
+  }
+  .drop-down-menu .account-button:hover{
+    background-color:#282828 ;
+  }
   
