--- a/src/Components/Artist/ArtistProfile/ArtistProfile.css
+++ b/src/Components/Artist/ArtistProfile/ArtistProfile.css
@@ -1,3 +1,7 @@
+.artist-page
+{
+    margin-top: 80px;
+}
 .background-color {
     background-image: linear-gradient(#212c39, #121e3d 50%, #000); 
     background-repeat: no-repeat;
