--- a/src/Components/Notifications/RecentActivities.css
+++ b/src/Components/Notifications/RecentActivities.css
@@ -3,7 +3,7 @@
   padding: 0 32px;
   margin: 0;
   width: 100%;
-  margin-bottom: 90px;
+  margin-bottom: 120px;
   padding-top: 5rem;
 }
 .recent-activities-page .notif-title
@@ -29,8 +29,16 @@
     border:1px solid #2a2a2a;
     color:whitesmoke;
     margin-bottom: 15px;
+    
 }
-.recent-activities-page .notifications:hover
+.recent-activities-page .unread
+{
+  background-color: rgb(66, 38, 38);
+}
+.recent-activities-page .unread:hover{
+  background-color:rgb(59, 34, 34);
+}
+.recent-activities-page .read:hover
 {
     background-color: rgb(53, 53, 53);
 }
