--- a/src/Components/HomePage/HomePageNavbar.css
+++ b/src/Components/HomePage/HomePageNavbar.css
@@ -114,7 +114,7 @@
 
 
 .home-nav #profile .user-img{
-  width: 40px;
+  max-width: 90px;
   height: 40px;
   margin: -20px 12px -20px 0;
   border-radius: 50%; 
