--- a/src/Components/Artist/ArtistProfile/ArtistProfile.css
+++ b/src/Components/Artist/ArtistProfile/ArtistProfile.css
@@ -5,6 +5,7 @@
 .background-color {
     background-image: linear-gradient(#212c39, #121e3d 50%, #000); 
     background-repeat: no-repeat;
+    min-height: 80vh;
 }
 
 #artist-audience .statistics-section {
