--- a/src/Components/Choose Artist/RecommendArtists.css
+++ b/src/Components/Choose Artist/RecommendArtists.css
@@ -3,7 +3,8 @@
     background-color:#121212 ;
     white-space: wrap;
     text-justify: auto;
-    max-width: 100rem;
+    min-height: 100vh;
+    max-width: 100%;
     padding-top: 60px;
 }
 .first-h1{
@@ -18,6 +19,7 @@
 }
 .btn{
     width: 150px;
+    height: 50px;
     margin-left: auto;
     margin-right: auto;
 }
