--- a/src/Components/Choose Artist/RecommendArtists.css
+++ b/src/Components/Choose Artist/RecommendArtists.css
@@ -17,11 +17,9 @@
     background-color: orange;
     border-radius: 20px;
 }
-.btn{
-    width: 150px;
+.Recomend {
+    min-width: 150px;
     height: 50px;
-    margin-left: auto;
-    margin-right: auto;
 }
 /* .buttonTrue {
     background-color:rgb(29, 28, 28);
